--- a/src/assets/scss/_nav.scss
+++ b/src/assets/scss/_nav.scss
@@ -1,7 +1,11 @@
 .LIGHT-nav_rapper {
   background-color: $white;
   @include centerByFlex;
-  border-bottom: 1px solid $border-light;
+  z-index: 9;
+  position: fixed;
+  width: 100%;
+  background: rgba($color: $white, $alpha: 0.6);
+  backdrop-filter: blur(8px);
   .fixedwrapper {
     width: 100%;
     @include centerByFlex;
@@ -73,7 +77,11 @@
 .DARK-nav_rapper {
   background-color: $primaryDark;
   @include centerByFlex;
-  border-bottom: 1px solid $border-dark;
+  z-index: 9;
+  position: fixed;
+  width: 100%;
+  background: rgba($color: $primaryDark, $alpha: 0.6);
+  backdrop-filter: blur(8px);
   .fixedwrapper {
     width: 100%;
     @include centerByFlex;
