--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -119,6 +119,12 @@
       justify-content: space-between;
       padding: 1.5rem 1.2rem;
 
+      .btnrow{
+        .dl-btn{
+          background-color: red;
+        }
+      }
+
       h4 {
         color: $font-dark;
         font-size: 1.3rem;
@@ -241,6 +247,12 @@
       align-items: center;
       justify-content: space-between;
       padding: 1.5rem 1.2rem;
+
+      .btnrow{
+        .dl-btn{
+          background-color: red;
+        }
+      }
 
       h4 {
         color: $font-light2;
