--- a/src/assets/scss/_color.scss
+++ b/src/assets/scss/_color.scss
@@ -27,3 +27,5 @@ $message-outgoing-dark:#5851DB;
 $message-incoming-dark:#242d42;
 $input-bg-light: rgb(233, 233, 233);
 $input-bg-dark: #1a2235;
+$border-danger:#f85249cb;
+$danger:#da3633;
